testdata/de/dm/intellij/bndtools/parser/BndHeaderParsersTest/testImportPackageHighlighting/bnd.bnd
Import-Package: <error descr="Cannot resolve package de.dm.non.existing">de.dm.non.existing</error>
